기준정보 > 상품정보

--- a/guide/elements/tabletitle.html
+++ b/guide/elements/tabletitle.html
@@ -110,4 +110,54 @@
         </div>
     </div>
 
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">Table Title (small)</p>
+        </div>
+        <div class="g-example-body">
+            <div class="title-box sm">
+                <div class="left-group">
+                    <span class="amount-set">
+                        <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
+                        <span class="amount">26</span><span class="unit">건</span>
+                    </span>
+                </div>
+                <div class="right-group">
+                    <div class="form-set">
+                        <span class="form-label">협력사</span>
+                        <select id="dropdownlist"  data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
+                            <option value="1">온라인</option>
+                            <option value="2">오프라인</option>
+                        </select>
+                        <button role="button" class="k-button blue-border">지정</button>
+                        <button role="button" class="k-button gray-border">대상 외</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="title-box sm">
+    &lt;div class="left-group">
+        &lt;span class="amount-set">
+            &lt;span class="amount current">1&lt;/span>&lt;span class="unit">건&lt;/span>&lt;span class="dash">/&lt;/span>
+            &lt;span class="amount">26&lt;/span>&lt;span class="unit">건&lt;/span>
+        &lt;/span>
+    &lt;/div>
+    &lt;div class="right-group">
+        &lt;div class="form-set">
+            &lt;span class="form-label">협력사&lt;/span>
+            &lt;select id="dropdownlist"  data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
+                &lt;option value="1">온라인&lt;/option>
+                &lt;option value="2">오프라인&lt;/option>
+            &lt;/select>
+            &lt;button role="button" class="k-button blue-border">지정&lt;/button>
+            &lt;button role="button" class="k-button gray-border">대상 외&lt;/button>
+        &lt;/div>
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
 </div>
