--- a/guide/list.html
+++ b/guide/list.html
@@ -226,9 +226,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-12</td>
                     <td class="ex_end">08-12</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="date_start">08-12</td>
+                    <td class="date_end">08-12</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -239,9 +239,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-12</td>
                     <td class="ex_end">08-12</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="date_start">08-12</td>
+                    <td class="date_end">08-12</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -252,9 +252,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-12</td>
                     <td class="ex_end">08-12</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state="ing"></td>
+                    <td class="date_start">08-12</td>
+                    <td class="date_end">08-12</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -267,7 +267,7 @@
                     <td class="ex_end">08-13</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -280,7 +280,7 @@
                     <td class="ex_end">08-13</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -413,11 +413,11 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">02계약</td>
                     <td class="d2">01계약문의관리</td>
-                    <td class="d3">01계약문의상세</td>
-                    <td class="sbid"><span class="pc">SA020101</span><span class="mo"></span></td>
+                    <td class="d3">02계약문의상세</td>
+                    <td class="sbid"><span class="pc">SA020102</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-20</td>
                     <td class="ex_end">08-20</td>
