--- a/guide/elements/table.html
+++ b/guide/elements/table.html
@@ -430,6 +430,158 @@
 
 
 
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">Grid toolbar Template</p>
+        </div>
+        <div class="g-example-body flex-inline">
+            <div class="table-content grid" id="viewModel_template">
+                <script type="text/x-kendo-template" id="toolbarTemplate_dropdown">
+                    <div class="title-box sm">
+                        <div class="left-group">
+                            <span class="amount-set">
+                                <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
+                                <span class="amount">26</span><span class="unit">건</span>
+                            </span>
+                        </div>
+                        <div class="right-group">
+                            <div class="form-set">
+                                <span class="form-label">협력사</span>
+                                <select id="dropdownlist" data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
+                                    <option value="1">온라인</option>
+                                    <option value="2">오프라인</option>
+                                </select>
+                                <button role="button" class="k-button blue-border">지정</button>
+                                <button role="button" class="k-button gray-border">대상 외</button>
+                            </div>
+                        </div>
+                    </div>
+                </script>
+                <script type="text/x-kendo-template" class="checkboxTemplate">
+                    <div class="h-checkbox no-label">
+                        <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+                        <label for="checkbox-nolabel"></label> 
+                    </div>
+                </script>
+                <div data-role="grid" 
+                    data-sortable="true" 
+                    data-editable="true" 
+                    data-columns='[
+                    { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
+                    { "title": "NO.", "width": 50 },
+                    { "field": ""  }
+                    ]' 
+                    data-bind="source: gridSource"
+                    data-toolbar="#=toolbarTemplate_dropdown()#">
+                </div>
+                <div class="table-bottom">
+                    <button data-role="button" class="gray-border">삭제</button>
+                </div>
+            </div>
+            <script>
+                var viewModel_template = kendo.observable({
+                    gridSource: [
+                        { "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+                        { "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+                        { "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" }
+                    ],
+                    displayGridSource: function() {
+                        return stringify(this.get("gridSource").toJSON());
+                    },
+                });
+                kendo.bind($("#viewModel_template"), viewModel_template); //그리드 스타일
+                setTimeout(function(){
+                    kendo.bind($("#dropdownlist"), {}); //템플릿 안 드롭다운
+                }, 100)
+                function toolbarTemplate_dropdown() {
+                    var template = kendo.template($('#toolbarTemplate_dropdown').html());
+                    var result = template({});
+                    return result
+                }
+                function checkboxTemplate() {
+                    var template = kendo.template($('.checkboxTemplate').html());
+                    var result = template({});
+                    return result
+                }
+            </script>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="table-content grid" id="viewModel_template">
+    &lt;script type="text/x-kendo-template" id="toolbarTemplate_dropdown">
+        &lt;div class="title-box sm">
+            &lt;div class="left-group">
+                &lt;span class="amount-set">
+                    &lt;span class="amount current">1&lt;/span>&lt;span class="unit">건&lt;/span>&lt;span class="dash">/&lt;/span>
+                    &lt;span class="amount">26&lt;/span>&lt;span class="unit">건&lt;/span>
+                &lt;/span>
+            &lt;/div>
+            &lt;div class="right-group">
+                &lt;div class="form-set">
+                    &lt;span class="form-label">협력사&lt;/span>
+                    &lt;select id="dropdownlist" data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
+                        &lt;option value="1">온라인&lt;/option>
+                        &lt;option value="2">오프라인&lt;/option>
+                    &lt;/select>
+                    &lt;button role="button" class="k-button blue-border">지정&lt;/button>
+                    &lt;button role="button" class="k-button gray-border">대상 외&lt;/button>
+                &lt;/div>
+            &lt;/div>
+        &lt;/div>
+    &lt;/script>
+    &lt;script type="text/x-kendo-template" class="checkboxTemplate">
+        &lt;div class="h-checkbox no-label">
+            &lt;input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+            &lt;label for="checkbox-nolabel">&lt;/label> 
+        &lt;/div>
+    &lt;/script>
+    &lt;div data-role="grid" 
+        data-sortable="true" 
+        data-editable="true" 
+        data-columns='[
+        { "title": "&lt;div class=h-checkbox>&lt;input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox />&lt;label for=checkbox-nolabel>&lt;/label>&lt;/div>", "width": 50, "template": "#=checkboxTemplate()#" },
+        { "title": "NO.", "width": 50 },
+        { "field": ""  }
+        ]' 
+        data-bind="source: gridSource"
+        data-toolbar="#=toolbarTemplate_dropdown()#">
+    &lt;/div>
+    &lt;div class="table-bottom">
+        &lt;button data-role="button" class="gray-border">삭제&lt;/button>
+    &lt;/div>
+&lt;/div>
+<script>
+    var viewModel_template = kendo.observable({
+        gridSource: [
+            { "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+            { "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+            { "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" }
+        ],
+        displayGridSource: function() {
+            return stringify(this.get("gridSource").toJSON());
+        },
+    });
+    kendo.bind($("#viewModel_template"), viewModel_template); //그리드 스타일
+    setTimeout(function(){
+        kendo.bind($("#dropdownlist"), {}); //템플릿 안 드롭다운
+    }, 100)
+    function toolbarTemplate_dropdown() {
+        var template = kendo.template($('#toolbarTemplate_dropdown').html());
+        var result = template({});
+        return result
+    }
+    function checkboxTemplate() {
+        var template = kendo.template($('.checkboxTemplate').html());
+        var result = template({});
+        return result
+    }
+</script>
+            </code></pre>
+        </div>
+    </div>
+
+
+
     
 
     <div class="g-example-wrap">
