--- a/guide/elements/list.html
+++ b/guide/elements/list.html
@@ -3,7 +3,216 @@
 
     <div class="g-example-wrap">
         <div class="g-example-head">
-            <p class="title">List box</p>
+            <p class="title">Banner List</p>
+        </div>
+        <div class="g-example-body ">
+            <ul class="status-banner contract">
+                <li class="list list1">
+                    <h4 class="tit">계약문의중</h4>
+                    <span class="count">50</span>
+                </li>
+                <li class="list list2">
+                    <h4 class="tit">계약대기</h4>
+                    <span class="count">5</span>
+                </li>
+                <li class="list list3">
+                    <h4 class="tit">계약완료</h4>
+                    <span class="count">30</span>
+                </li>
+                <li class="list list4">
+                    <h4 class="tit">출금금지</h4>
+                    <span class="count">5</span>
+                </li>
+                <li class="list list5">
+                    <h4 class="tit">서비스중지</h4>
+                    <span class="count">2</span>
+                </li>
+                <li class="list list6">
+                    <h4 class="tit">서비스해지예정</h4>
+                    <span class="count">5</span>
+                </li>
+                <li class="list list7">
+                    <h4 class="tit">서비스해지</h4>
+                    <span class="count">1</span>
+                </li>
+            </ul>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;ul class="status-banner contract">
+    &lt;li class="list list1">
+        &lt;h4 class="tit">계약문의중&lt;/h4>
+        &lt;span class="count">50&lt;/span>
+    &lt;/li>
+    &lt;li class="list list2">
+        &lt;h4 class="tit">계약대기&lt;/h4>
+        &lt;span class="count">5&lt;/span>
+    &lt;/li>
+    &lt;li class="list list3">
+        &lt;h4 class="tit">계약완료&lt;/h4>
+        &lt;span class="count">30&lt;/span>
+    &lt;/li>
+    &lt;li class="list list4">
+        &lt;h4 class="tit">출금금지&lt;/h4>
+        &lt;span class="count">5&lt;/span>
+    &lt;/li>
+    &lt;li class="list list5">
+        &lt;h4 class="tit">서비스중지&lt;/h4>
+        &lt;span class="count">2&lt;/span>
+    &lt;/li>
+    &lt;li class="list list6">
+        &lt;h4 class="tit">서비스해지예정&lt;/h4>
+        &lt;span class="count">5&lt;/span>
+    &lt;/li>
+    &lt;li class="list list7">
+        &lt;h4 class="tit">서비스해지&lt;/h4>
+        &lt;span class="count">1&lt;/span>
+    &lt;/li>
+&lt;/ul>
+            </code></pre>
+        </div>
+    </div>
+
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">Banner Info</p>
+        </div>
+        <div class="g-example-body ">
+            <div class="info-banner company">
+                <div class="list">
+                    <h4 class="tit">회사명</h4>
+                    <span class="desc">나래재가복지센터 (02-1234-5678)</span>
+                    <span class="badge yellow">수납환경진단</span>
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="info-banner company">
+    &lt;div class="list">
+        &lt;h4 class="tit">회사명&lt;/h4>
+        &lt;span class="desc">나래재가복지센터 (02-1234-5678)&lt;/span>
+        &lt;span class="badge yellow">수납환경진단&lt;/span>
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">List box(Half)</p>
+        </div>
+        <div class="g-example-body ">
+            <ul class="list-box gray-box half">
+                <li class="list">
+                    <span class="label has-bar">협력사명</span>
+                    <span class="desc">효성에프엠에스협력사</span>
+                </li>
+                <li class="list">
+                    <span class="label has-bar">협력사ID</span>
+                    <span class="desc">hyosungfms001</span>
+                </li>
+            </ul>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;ul class="list-box gray-box half">
+    &lt;li class="list">
+        &lt;span class="label has-bar">협력사명&lt;/span>
+        &lt;span class="desc">효성에프엠에스협력사&lt;/span>
+    &lt;/li>
+    &lt;li class="list">
+        &lt;span class="label has-bar">협력사ID&lt;/span>
+        &lt;span class="desc">hyosungfms001&lt;/span>
+    &lt;/li>
+&lt;/ul>
+            </code></pre>
+        </div>
+    </div>
+
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">List box (History)</p>
+        </div>
+        <div class="g-example-body ">
+            <div class="list-wrap">
+                <div class="list-box history">
+                    <span class="badge green">가입</span>
+                    <div class="list">
+                        <span class="label has-bar">협력사담당자</span>
+                        <span class="desc">홍길동</span>
+                    </div>
+                    <div class="list">
+                        <span class="label has-bar">상담일시</span>
+                        <span class="desc">2021/05/20 14:29:57</span>
+                    </div>
+                    <div class="list">
+                        <span class="label has-bar">상담내용</span>
+                        <span class="desc">효성에프엠에스 요청사항입니다.</span>
+                    </div>
+                </div>
+                <div class="list-box history">
+                    <span class="badge gray">진행안함</span>
+                    <div class="list">
+                        <span class="label has-bar">협력사담당자</span>
+                        <span class="desc">홍길동</span>
+                    </div>
+                    <div class="list">
+                        <span class="label has-bar">상담일시</span>
+                        <span class="desc">2021/05/20 14:29:57</span>
+                    </div>
+                    <div class="list">
+                        <span class="label has-bar">상담내용</span>
+                        <span class="desc">효성에프엠에스 요청사항입니다.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="list-wrap">
+    &lt;div class="list-box history">
+        &lt;span class="badge green">가입&lt;/span>
+        &lt;div class="list">
+            &lt;span class="label has-bar">협력사담당자&lt;/span>
+            &lt;span class="desc">홍길동&lt;/span>
+        &lt;/div>
+        &lt;div class="list">
+            &lt;span class="label has-bar">상담일시&lt;/span>
+            &lt;span class="desc">2021/05/20 14:29:57&lt;/span>
+        &lt;/div>
+        &lt;div class="list">
+            &lt;span class="label has-bar">상담내용&lt;/span>
+            &lt;span class="desc">효성에프엠에스 요청사항입니다.&lt;/span>
+        &lt;/div>
+    &lt;/div>
+    &lt;div class="list-box history">
+        &lt;span class="badge gray">진행안함&lt;/span>
+        &lt;div class="list">
+            &lt;span class="label has-bar">협력사담당자&lt;/span>
+            &lt;span class="desc">홍길동&lt;/span>
+        &lt;/div>
+        &lt;div class="list">
+            &lt;span class="label has-bar">상담일시&lt;/span>
+            &lt;span class="desc">2021/05/20 14:29:57&lt;/span>
+        &lt;/div>
+        &lt;div class="list">
+            &lt;span class="label has-bar">상담내용&lt;/span>
+            &lt;span class="desc">효성에프엠에스 요청사항입니다.&lt;/span>
+        &lt;/div>
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">List box (Selectable)</p>
         </div>
         <div class="g-example-body ">
             <div class="title-box xsm">
