--- a/pages/SA/SA010402_02.html
+++ b/pages/SA/SA010402_02.html
@@ -95,9 +95,19 @@
                                 <th scope="row">프로모션기간</th>
                                 <td colspan="3">
                                     <div class="form-set">
-                                        <input data-role="datepicker" placeholder="yyyymmdd" class="sm">
+                                        <input data-role="datepicker" 
+                                            data-format="yyyy/MM/dd"
+                                            placeholder="yyyymmdd" 
+                                            data-culture="ko-KR"
+                                            data-footer="false"
+                                            class="datepicker sm" /> 
                                         <span class="bar">~</span>
-                                        <input data-role="datepicker" placeholder="yyyymmdd" class="sm">
+                                        <input data-role="datepicker" 
+                                            data-format="yyyy/MM/dd"
+                                            placeholder="yyyymmdd" 
+                                            data-culture="ko-KR"
+                                            data-footer="false"
+                                            class="datepicker sm" /> 
                                     </div>
                                 </td>
                             </tr>
