--- a/guide/elements/form.html
+++ b/guide/elements/form.html
@@ -203,7 +203,7 @@
 
     <div class="g-example-wrap">
         <div class="g-example-head">
-            <p class="title">검색부분</p>
+            <p class="title">검색부분(페이지)</p>
         </div>
         <div class="g-example-body">
             <div class="search-control">
@@ -307,6 +307,158 @@
                 &lt;li data-role="button">&lt;span>3개월&lt;/span>&lt;/li>
             &lt;/ul>
         &lt;/div>
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">검색부분(페이지)</p>
+        </div>
+        <div class="g-example-body">
+            <div class="search-control">
+                <div class="form-group">
+                    <span class="label">검색항목</span>
+                    <div class="form-set">
+                        <select data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
+                            <option value="1">온라인</option>
+                            <option value="2">오프라인</option>
+                        </select>
+                        <div class="input-set search lg">
+                            <i class="h-ico search"></i>
+                            <input type="text" class="h-input" placeholder="입력해주세요">
+                        </div>
+                        <div class="h-checkbox ml-20">
+                            <input type="checkbox" id="checkbox1-1" name="checkbox" />
+                            <label for="checkbox1-1"><span>미할당 계약 문의만 조회</span></label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <span class="label">검색기간</span>
+                    <div class="form-set">
+                        <input data-role="datepicker" 
+                            data-format="yyyy/MM/dd"
+                            placeholder="yyyymmdd" 
+                            data-culture="ko-KR"
+                            data-footer="false"
+                            class="datepicker sm" />
+                        <span class="bar">~</span>
+                        <input data-role="datepicker" 
+                            data-format="yyyy/MM/dd"
+                            placeholder="yyyymmdd" 
+                            data-culture="ko-KR"
+                            data-footer="false"
+                            class="datepicker sm" />
+                            <div data-role="buttongroup" class="period"
+                            data-index="0">
+                                <button data-role="button"><span>오늘</span></button>
+                                <button data-role="button"><span>1주</span></button>
+                            </div>
+                    </div>
+                </div>
+                
+                <button type="submit" data-role="button" class="search" data-icon="search-blue"><span>검색</span></button>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="search-control">
+    &lt;div class="form-group">
+        &lt;span class="label">검색항목&lt;/span>
+        &lt;div class="form-set">
+            &lt;select data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
+                &lt;option value="1">온라인&lt;/option>
+                &lt;option value="2">오프라인&lt;/option>
+            &lt;/select>
+            &lt;div class="input-set search lg">
+                &lt;i class="h-ico search">&lt;/i>
+                &lt;input type="text" class="h-input" placeholder="입력해주세요">
+            &lt;/div>
+            &lt;div class="h-checkbox ml-20">
+                &lt;input type="checkbox" id="checkbox1-1" name="checkbox" />
+                &lt;label for="checkbox1-1">&lt;span>미할당 계약 문의만 조회&lt;/span>&lt;/label>
+            &lt;/div>
+        &lt;/div>
+    &lt;/div>
+    &lt;div class="form-group">
+        &lt;span class="label">검색기간&lt;/span>
+        &lt;div class="form-set">
+            &lt;input data-role="datepicker" 
+                data-format="yyyy/MM/dd"
+                placeholder="yyyymmdd" 
+                data-culture="ko-KR"
+                data-footer="false"
+                class="datepicker sm" />
+            &lt;span class="bar">~&lt;/span>
+            &lt;input data-role="datepicker" 
+                data-format="yyyy/MM/dd"
+                placeholder="yyyymmdd" 
+                data-culture="ko-KR"
+                data-footer="false"
+                class="datepicker sm" />
+                &lt;div data-role="buttongroup" class="period"
+                data-index="0">
+                    &lt;button data-role="button">&lt;span>오늘&lt;/span>&lt;/button>
+                    &lt;button data-role="button">&lt;span>1주&lt;/span>&lt;/button>
+                &lt;/div>
+        &lt;/div>
+    &lt;/div>
+    
+    &lt;button type="submit" data-role="button" class="search" data-icon="search-blue">&lt;span>검색&lt;/span>&lt;/button>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">검색부분(팝업)</p>
+        </div>
+        <div class="g-example-body">
+            <div class="search-control">
+                <div class="form-group">
+                    <span class="label">검색항목</span>
+                    <div class="form-set">
+                        <select data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
+                            <option value="1">온라인</option>
+                            <option value="2">오프라인</option>
+                        </select>
+                        <div class="input-set search lg">
+                            <i class="h-ico sm search">검색</i>
+                            <input type="text" class="h-input" placeholder="입력해주세요">
+                        </div>
+                        <div class="h-checkbox ml-20">
+                            <input type="checkbox" id="checkbox1-1" name="checkbox" />
+                            <label for="checkbox1-1"><span>구비서류미완료만조회</span></label>
+                        </div>
+                    </div>
+                    <button data-role="button" class="blue-border">검색</button>
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="search-control">
+    &lt;div class="form-group">
+        &lt;span class="label">검색항목&lt;/span>
+        &lt;div class="form-set">
+            &lt;select data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
+                &lt;option value="1">온라인&lt;/option>
+                &lt;option value="2">오프라인&lt;/option>
+            &lt;/select>
+            &lt;div class="input-set search lg">
+                &lt;i class="h-ico sm search">검색&lt;/i>
+                &lt;input type="text" class="h-input" placeholder="입력해주세요">
+            &lt;/div>
+            &lt;div class="h-checkbox ml-20">
+                &lt;input type="checkbox" id="checkbox1-1" name="checkbox" />
+                &lt;label for="checkbox1-1">&lt;span>구비서류미완료만조회&lt;/span>&lt;/label>
+            &lt;/div>
+        &lt;/div>
+        &lt;button data-role="button" class="blue-border">검색&lt;/button>
     &lt;/div>
 &lt;/div>
             </code></pre>
